@@ -930,18 +930,25 @@ class IMP_Ajax_Application_Handler_Dynamic extends Horde_Core_Ajax_Application_H
      */
     public function addAttachment()
     {
-        $imp_compose = $GLOBALS['injector']->getInstance('IMP_Factory_Compose')->create($this->vars->composeCache);
+        global $injector, $notification, $session;
 
         $result = new stdClass;
         $result->action = 'addAttachment';
         $result->success = 0;
 
-        if ($GLOBALS['session']->get('imp', 'file_upload') &&
-            $imp_compose->addFilesFromUpload('file_')) {
-            $ajax_compose = new IMP_Ajax_Application_Compose($imp_compose);
-            $result->atc = end($ajax_compose->getAttachmentInfo());
-            $result->success = 1;
-            $result->imp_compose = $imp_compose->getCacheId();
+        /* A max POST size failure will result in ALL HTTP parameters being
+         * empty. Catch that here. */
+        if (!isset($this->vars->composeCache)) {
+            $notification->push(_("Your attachment was not uploaded. Most likely, the file exceeded the maximum size allowed by the server configuration."), 'horde.warning');
+        } elseif ($session->get('imp', 'file_upload')) {
+            $imp_compose = $injector->getInstance('IMP_Factory_Compose')->create($this->vars->composeCache);
+
+            if ($imp_compose->addFilesFromUpload('file_')) {
+                $ajax_compose = new IMP_Ajax_Application_Compose($imp_compose);
+                $result->atc = end($ajax_compose->getAttachmentInfo());
+                $result->success = 1;
+                $result->imp_compose = $imp_compose->getCacheId();
+            }
         }
 
         return new Horde_Core_Ajax_Response_HordeCore_JsonHtml($result);
