@@ -2581,6 +2581,8 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Catch failure to add attachments because PHP's maximum allowed POST size was exceeded.
+* [jan] Fix search link from portal if using dynamic view (Bug #11314).
 * [mms] Fix regression in using Virtual Trash (Bug #11478; tonyb@go-concepts.com).
 * [mms] Fix sending MDN notifications in traditional view (Bug #11311).
 * [mms] Fix changing sort order in dynamic search mailboxes (Bug #11108).
