@@ -186,6 +186,9 @@ v6.0.0alpha1
 v5.0.24-git
 -----------
 
+[mms] Catch failure to add attachments because PHP's maximum allowed POST size
+      was exceeded.
+[jan] Fix search link from portal if using dynamic view (Bug #11314).
 [mms] Fix regression in using Virtual Trash (Bug #11478;
       tonyb@go-concepts.com).
 [mms] Fix sending MDN notifications in traditional view (Bug #11311).
